removendo testagem desnecessaria

--- a/fitting.ipynb
+++ b/fitting.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -319,33 +319,33 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/R_FIXO_1.csv\n",
-      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/R_FIXO_1_results.csv\n",
-      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/R_FIXO_1_spline_analysis.png\n",
+      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/R_FIXO_1.csv\n",
+      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/R_FIXO_1_results.csv\n",
+      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/R_FIXO_1_spline_analysis.png\n",
       "\n",
-      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/R_FIXO_3.csv\n",
-      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/R_FIXO_3_results.csv\n",
-      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/R_FIXO_3_spline_analysis.png\n",
+      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/R_FIXO_3.csv\n",
+      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/R_FIXO_3_results.csv\n",
+      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/R_FIXO_3_spline_analysis.png\n",
       "\n",
-      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/T_FIXO_1.csv\n",
-      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/T_FIXO_1_results.csv\n",
-      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/T_FIXO_1_spline_analysis.png\n",
+      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/T_FIXO_1.csv\n",
+      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/T_FIXO_1_results.csv\n",
+      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/T_FIXO_1_spline_analysis.png\n",
       "\n",
-      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/A_FIXO_1.csv\n",
-      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/A_FIXO_1_results.csv\n",
-      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/A_FIXO_1_spline_analysis.png\n",
+      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/A_FIXO_1.csv\n",
+      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/A_FIXO_1_results.csv\n",
+      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/A_FIXO_1_spline_analysis.png\n",
       "\n",
-      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/T_FIXO_2.csv\n",
-      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/T_FIXO_2_results.csv\n",
-      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/T_FIXO_2_spline_analysis.png\n",
+      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/T_FIXO_2.csv\n",
+      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/T_FIXO_2_results.csv\n",
+      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/T_FIXO_2_spline_analysis.png\n",
       "\n",
-      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/R_FIXO_2.csv\n",
-      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/R_FIXO_2_results.csv\n",
-      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/R_FIXO_2_spline_analysis.png\n",
+      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/R_FIXO_2.csv\n",
+      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/R_FIXO_2_results.csv\n",
+      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/R_FIXO_2_spline_analysis.png\n",
       "\n",
-      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/A_FIXO_2.csv\n",
-      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/A_FIXO_2_results.csv\n",
-      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/A_FIXO_2_spline_analysis.png\n"
+      "Processando arquivo: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/A_FIXO_2.csv\n",
+      "Resultados salvos em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/A_FIXO_2_results.csv\n",
+      "Gráfico salvo em: /home/filipecruz/Downloads/Filipe adriano e jose/franck_hertz/A_FIXO_2_spline_analysis.png\n"
      ]
     }
    ],
@@ -391,27 +391,21 @@
     "    picos_ajuste, _ = find_peaks(y_fit, height=0)\n",
     "\n",
     "    # Calcular médias das distâncias entre picos\n",
-    "    if len(picos_dados) > 1:\n",
-    "        distancias_dados = np.diff(tensao[picos_dados])\n",
-    "        media_distancia_dados = np.mean(distancias_dados)\n",
-    "    else:\n",
-    "        media_distancia_dados = None\n",
+    "    distancias_dados = np.diff(tensao[picos_dados])\n",
+    "    media_distancia_dados = np.mean(distancias_dados)\n",
     "\n",
-    "    if len(picos_ajuste) > 1:\n",
-    "        distancias_ajuste = np.diff(x_fit[picos_ajuste])\n",
-    "        media_distancia_ajuste = np.mean(distancias_ajuste)\n",
-    "    else:\n",
-    "        media_distancia_ajuste = None\n",
+    "    distancias_ajuste = np.diff(x_fit[picos_ajuste])\n",
+    "    media_distancia_ajuste = np.mean(distancias_ajuste)\n",
     "\n",
     "    # Salvar resultados em um arquivo CSV\n",
     "    output_csv = os.path.splitext(file_path)[0] + \"_results.csv\"\n",
     "    resultados = {\n",
-    "        \"Pico (Tensão - Dados)\": tensao[picos_dados] if len(picos_dados) > 0 else [],\n",
-    "        \"Pico (Corrente - Dados)\": corrente[picos_dados] if len(picos_dados) > 0 else [],\n",
-    "        \"Média Distância Picos - Dados (V)\": [media_distancia_dados] if media_distancia_dados is not None else [],\n",
-    "        \"Pico (Tensão - Ajuste)\": x_fit[picos_ajuste] if len(picos_ajuste) > 0 else [],\n",
-    "        \"Pico (Corrente - Ajuste)\": y_fit[picos_ajuste] if len(picos_ajuste) > 0 else [],\n",
-    "        \"Média Distância Picos - Ajuste (V)\": [media_distancia_ajuste] if media_distancia_ajuste is not None else [],\n",
+    "        \"Pico (Tensão - Dados)\": tensao[picos_dados],\n",
+    "        \"Pico (Corrente - Dados)\": corrente[picos_dados],\n",
+    "        \"Média Distância Picos - Dados (V)\": [media_distancia_dados],\n",
+    "        \"Pico (Tensão - Ajuste)\": x_fit[picos_ajuste],\n",
+    "        \"Pico (Corrente - Ajuste)\": y_fit[picos_ajuste],\n",
+    "        \"Média Distância Picos - Ajuste (V)\": [media_distancia_ajuste],\n",
     "    }\n",
     "    resultados_df = pd.DataFrame(dict([(k, pd.Series(v)) for k, v in resultados.items()]))\n",
     "    resultados_df.to_csv(output_csv, index=False)\n",
